[gd_scene load_steps=4 format=3 uid="uid://dtgk7g352nodv"]

[ext_resource type="Theme" uid="uid://cwdo01ubsxv0l" path="res://theme.tres" id="1_1n0d2"]
[ext_resource type="Script" uid="uid://dy5fgthtm7nbr" path="res://start.gd" id="1_ots34"]
[ext_resource type="PackedScene" uid="uid://cw0s0cjc5g3vs" path="res://main_interface.tscn" id="2_qn1rc"]

[node name="Start" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1n0d2")
script = ExtResource("1_ots34")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="StartMenu" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OllamaUrl" type="LineEdit" parent="CenterContainer/StartMenu"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "localhost:11434"

[node name="Connect" type="Button" parent="CenterContainer/StartMenu"]
layout_mode = 2
text = "Connect to Ollama"

[node name="StatusLabel" type="Label" parent="CenterContainer/StartMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "Status: disconnected"

[node name="Models" type="VBoxContainer" parent="CenterContainer/StartMenu"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SelectModel" type="MenuButton" parent="CenterContainer/StartMenu/Models"]
unique_name_in_owner = true
layout_mode = 2
text = "Select a model:"

[node name="SelectedModel" type="Label" parent="CenterContainer/StartMenu/Models"]
unique_name_in_owner = true
layout_mode = 2
text = "None"

[node name="UseModel" type="Button" parent="CenterContainer/StartMenu/Models"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Use model"

[node name="MainInterface" parent="." instance=ExtResource("2_qn1rc")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="CenterContainer/StartMenu/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="CenterContainer/StartMenu/Models/UseModel" to="." method="_on_use_model_pressed"]
[connection signal="goBack" from="MainInterface" to="." method="_on_main_interface_go_back"]
